--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+LudumDare 2017/Builds
 # =============== #
 # Unity generated #
 # =============== #
@@ -31,3 +32,4 @@ ehthumbs.db
 Thumbs.db
 *.sln
 *.csproj
+
