--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,34 @@ Thumbs.db
 *.sln
 *.csproj
 
+LudumDare 2017/Assets/Scenes/mainScene/Lightmap-0_comp_dir.png
+LudumDare 2017/Assets/Scenes/mainScene/Lightmap-0_comp_dir.png.meta
+LudumDare 2017/Assets/Scenes/mainScene/Lightmap-0_comp_light.exr
+LudumDare 2017/Assets/Scenes/mainScene/Lightmap-0_comp_light.exr.meta
+LudumDare 2017/Assets/Standard Assets/Characters/RollerBall.meta
+LudumDare 2017/Assets/Standard Assets/Characters/RollerBall/Materials.meta
+LudumDare 2017/Assets/Standard Assets/Characters/RollerBall/Models.meta
+LudumDare 2017/Assets/Standard Assets/Characters/RollerBall/Prefabs.meta
+LudumDare 2017/Assets/Standard Assets/Characters/RollerBall/Scripts.meta
+LudumDare 2017/Assets/Standard Assets/Characters/RollerBall/Textures.meta
+LudumDare 2017/Assets/Standard Assets/Characters/ThirdPersonCharacter.meta
+LudumDare 2017/Assets/Standard Assets/Characters/ThirdPersonCharacter/Animation.meta
+LudumDare 2017/Assets/Standard Assets/Characters/ThirdPersonCharacter/Animator.meta
+LudumDare 2017/Assets/Standard Assets/Characters/ThirdPersonCharacter/Materials.meta
+LudumDare 2017/Assets/Standard Assets/Characters/ThirdPersonCharacter/Models.meta
+LudumDare 2017/Assets/Standard Assets/Characters/ThirdPersonCharacter/Prefabs.meta
+LudumDare 2017/Assets/Standard Assets/Characters/ThirdPersonCharacter/Scripts.meta
+LudumDare 2017/Assets/Standard Assets/Characters/ThirdPersonCharacter/Textures.meta
+LudumDare 2017/Assets/Standard Assets/PhysicsMaterials.meta
+LudumDare 2017/Assets/TextMesh Pro/Color Gradients.meta
+LudumDare 2017/Assets/TextMesh Pro/Examples.meta
+LudumDare 2017/Assets/TextMesh Pro/Examples/Materials.meta
+LudumDare 2017/Assets/TextMesh Pro/Examples/Prefabs.meta
+LudumDare 2017/Assets/TextMesh Pro/Examples/Resources.meta
+LudumDare 2017/Assets/TextMesh Pro/Examples/Resources/Fonts & Materials.meta
+LudumDare 2017/Assets/TextMesh Pro/Examples/Resources/Sprite Assets.meta
+LudumDare 2017/Assets/TextMesh Pro/Examples/Scenes.meta
+LudumDare 2017/Assets/TextMesh Pro/Examples/Scripts.meta
+LudumDare 2017/Assets/TextMesh Pro/Examples/Sprites.meta
+LudumDare 2017/Assets/TextMesh Pro/Examples/Textures.meta
+LudumDare 2017/Assets/TextMesh Pro/User Guide.meta
